--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-table": "^8.20.5",
+    "@testing-library/user-event": "^14.5.2",
     "oc-modal-plugin": "^0.1.2",
     "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
