--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "esModuleInterop": true,
-    "allowJs": true
+    "allowJs": true,
+    "types": ["jest", "@testing-library/jest-dom"],
+    "target": "es2017",
+    "lib": ["dom", "es2017"],
   },
   "include": ["src/**/*", "jest.config.ts"]
 }
