--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
+    "skipLibCheck": true,
     "jsx": "react-jsx",
     "esModuleInterop": true,
     "allowJs": true,
@@ -12,5 +13,6 @@
     "target": "es2017",
     "lib": ["dom", "es2017"],
   },
-  "include": ["src/**/*", "jest.config.ts"]
+  "include": ["src/**/*", "jest.config.ts"],
+  "exclude": ["node_modules", "dist"]
 }
