--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,22 +1,19 @@
 {
   "compilerOptions": {
+    "composite": true,
+    "emitDeclarationOnly": true,
+    "allowImportingTsExtensions": true,
     "target": "ES2022",
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "outDir": "./dist/node",
+    "rootDir": "./src",
+    "strict": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["src/vite.config.ts"],
+  "exclude": ["node_modules", "dist"]
 }
